feat: Parametros, destructuring, funciones

--- a/2-ecma/index.html
+++ b/2-ecma/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./2.1-scope.js" defer></script>
+  <!-- <script src="./2.1-scope.js" defer></script> -->
+   <script src="./2.2-parametros-destructuring.js" defer></script>
   <title>Document</title>
 </head>
 <body>
