--- a/2-ecma/index.html
+++ b/2-ecma/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <script src="./2.1-scope.js" defer></script> -->
-   <script src="./2.2-parametros-destructuring.js" defer></script>
+  <!-- <script src="./2.2-parametros-destructuring.js" defer></script> -->
+  <script src="./2.3-ciclos.js" defer></script>
   <title>Document</title>
 </head>
+
 <body>
   <h1>Hola!</h1>
 </body>
+
 </html>
