--- a/3-poo/index.html
+++ b/3-poo/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./3.1-funcion-cosntructora.js" defer></script>
+   <!-- <script src="./3.1.1-ejercicio-funcion-constructora.js" defer></script> -->
   <title>Document</title>
 </head>
 <body>
