feat: constructor listas ligadas

--- a/4-estruturas-de-datos/index.html
+++ b/4-estruturas-de-datos/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./big-o-notation.js" defer></script>
+  <!-- <script src="./big-o-notation.js" defer></script> -->
+  <script src="./4.2-listas-ligadas.js" defer></script>
   <title>Document</title>
 </head>
 <body>
