feat: tablas hash

--- a/4-estruturas-de-datos/index.html
+++ b/4-estruturas-de-datos/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <script src="./big-o-notation.js" defer></script> -->
-  <script src="./4.2-listas-ligadas.js" defer></script>
+  <!-- <script src="./4.2-listas-ligadas.js" defer></script> -->
+  <script src="./4.3-tabalas-hash.js" defer></script>
   <title>Document</title>
 </head>
 <body>
